objects/EUR_CRM_PROS_Vol_Tracker_Product__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>PROS_Vol_Tracker_Products_BQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ID_Card_Volume__c</fullName>
        <label>ID Card Volume</label>
        <referenceTo>EUR_CRM_ID_Card_Volume__c</referenceTo>
        <relationshipName>PROS_Vol_Tracker_Products_VolCard</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Category__c</fullName>
        <formula>TEXT(EUR_CRM_Brand_Quality__r.EUR_CRM_Sub_Category__c)</formula>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <label>PROS Vol Tracker Product (EU)</label>
    <nameField>
        <displayFormat>VTP-{00000000}</displayFormat>
        <label>PROS Vol Tracker Product No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROS Vol Tracker Product (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PRT_Vol_Tracker_Product_BQ</fullName>
        <active>true</active>
        <label>EUR PRT Vol Tracker Product BQ</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>